# i3-live-tree

./: .editorconfig  .gitignore  .green  LICENSE  Makefile  README.md  devbox.json  pyproject.toml  setup.cfg
.github/workflows/: main.yml
i3_live_tree/: __init__.py  __main__.py  i3_async_main.py  i3_event_handlers.py  tree_serializer.py
tests/: mocks.py  st_system.py  test_i3_event_handlers.py  test_i3_live_tree.py  test_integration.py  test_tree_serializer.py
