[project]
name = "i3-live-tree"
version = "0.1.0"
description = "i3 live tree representation"
authors = [{ name = "Davide Laezza", email = "<truzzialrogo@gmx.com>" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = ["i3ipc>=2.2.1"]

[dependency-groups]
dev = ["nose2[coverage-plugin]>=0.15.1"]

[project.scripts]
i3-live-tree = "i3_live_tree:main"
test = "nose2:discover"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.nose2.unittest]
start-dir = "tests"

[tool.nose2.coverage]
always-on = true
stdout = true
stderr = false

[tool.nose2.output-buffer]
always-on = true
stdout = true
stderr = false

[tool.nose2.test-result]
always-on = true
descriptions = true
